# pyrle

./: .gitignore  .travis.yml  CHANGELOG.txt  README.md  build_code.py  pyproject.toml  pyrle.pyx  rle.pyx  rle_arithmetic_template.j2  setup.py  template_filler.yaml  template_filler_add_sub.yaml  template_filler_div.yaml  test.py
.github/workflows/: build_and_upload_wheels.yml  install_doctest_lint_typecheck.yml
pyrle/: __init__.py  methods.py  raymock.py  rle.py  rledict.py
pyrle/src/: ._coverage.html  ._rle.html  coverage.html  coverage.pyx  getitem.html  getitem.pyx  rle.html  rle.pyx
src/: coverage.pyx  rle.pyx
tests/: compute_Rle.R  helpers.py  hypothesis_helper.py  subset_coverage.R  test_GRles.py  test_add.py  test_coverage.py  test_div.py  test_hypothesis.py  test_hypothesis_coverage.py  test_inverse.py  test_operations_GRles.py  test_subset_coverage.py  test_subtract.py
